# nspektr

./: CHANGES.rst  NEWS.rst  README.rst  pyproject.toml  setup.cfg
docs/: conf.py  index.rst
nspektr/: __init__.py  _compat.py
